# parchmark

./: .AUTHELIA_OIDC_PLAN_IMPLEMENTATION_COMPLETE  .env.db.example  .env.example.oidc  .eslintrc.cjs  .gitignore  .mcp.json  AGENTS.md  API_DOCUMENTATION.md  ARCHITECTURE.md  AUTHELIA_OIDC_PLAN_IMPLEMENTATION_TRACKER.md  AUTHENTICATION_IMPLEMENTATION.md  CLAUDE.md  DATABASE_SCHEMA.md  DEVELOPMENT.md  Dockerfile  GEMINI.md  MIGRATION_PLAN.md  Makefile  NORTH-STAR.md  OVERVIEW.md  PRODUCTION_DEPLOYMENT.md  README.md  REFACTORING_PLAN.md  UI_AESTHETIC_RECOMMENDATIONS.md  UI_DOCUMENTATION.md  authelia-dev-config.yml  authelia-users-database.yml  docker-compose-dev.yml  docker-compose.db-admin.yml  docker-compose.dev.yml  docker-compose.oidc-test.yml  docker-compose.prod.yml  docker-compose.yml  jest.config.js  package-lock.json  package.json  setup-and-run-tests.sh  tsconfig.test.json  vite.config.ts
.beads/: issues.jsonl  metadata.json
.claude/: .keel-install.json  KEEL-CONTRACT.md  keel-uninstall.py  keel_manifest.py  keel_receipt.py  ralph-loop.local.md  settings.json
.karta/: doc-gardner.json
.keel/: KEEL-CONTRACT.md  install.json  keel_manifest.py  keel_receipt.py  keel_settings.py  uninstall.py
.sisyphus/: boulder.json
backend/: .coverage  .dockerignore  .env.docker  .env.docker.example  .env.example  .env.production  .env.production.example  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Makefile  README.md  alembic.ini  coverage.xml  docker-compose.yml  fix_trailing_lines.py  init.sql  main.py  parchmark.db  pyproject.toml  pytest.ini  requirements.txt  requirements.txt.archived  run.py
backend/app/: __init__.py  __main__.py  main.py  version.py
backend/app/auth/: auth.py  dependencies.py  oidc_validator.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/database/: context.py  database.py  init_db.py  seed.py
backend/app/middleware/: __init__.py  db_session.py
backend/app/models/: models.py  note.py  user.py
backend/app/routers/: auth.py  health.py  notes.py  settings.py
backend/app/schemas/: schemas.py
backend/app/services/: __init__.py  auth_service.py  backfill.py  embeddings.py  health_service.py  note_event_streams.py  note_events.py  note_service.py  settings_service.py
backend/app/utils/: markdown.py
backend/migrations/: env.py
backend/migrations/versions/: 170dd30cebde_add_indexes_for_user_id_username_oidc_.py  1b2c3d4e5f6a_add_note_tags.py  33a4da6b0cac_add_embedding_to_notes.py  3c1162fce719_add_oidc_support_to_user_model.py  49f4bec52ca3_convert_embedding_to_pgvector.py  7f1c343772e8_drop_embedding_columns_and_pgvector.py  8f4d2b1c9a7e_add_notes_events_notify_trigger.py  fad201191d3b_add_access_tracking_to_notes.py
backend/scripts/: create_test_user.py  db-admin-entrypoint.sh  docker-entrypoint.sh  manage_users.py  migrate.sh  test_oidc_integration.py  validate_oidc_deployment.py
backend/tests/: conftest.py  factories.py  test_main.py
backend/tests/integration/: test_app_boot_no_openai.py  test_database_isolation.py  test_f21_docs_sweep.py  test_main.py  test_note_events_listener.py  test_refresh_token.py  test_settings.py
backend/tests/integration/auth/: test_auth_router.py  test_oidc_hybrid_auth.py
backend/tests/integration/migrations/: test_f19_consumer_cleanup.py  test_f19_drop_embedding.py  test_f20_brownfield_rewrites.py  test_f20_static_checks.py  test_f23_notes_notify_trigger.py  test_note_tags_migration.py
backend/tests/integration/notes/: test_access_tracking.py  test_cross_user_event_stream_isolation.py  test_endpoint_removal.py  test_note_events_stream.py  test_note_tags_api.py  test_notes_router.py  test_similarity.py
backend/tests/unit/: test_settings_schemas.py
backend/tests/unit/app/: test_main_module.py  test_note_events_lifespan.py
backend/tests/unit/auth/: test_auth.py  test_dependencies.py  test_oidc_error_handling.py  test_oidc_validator.py
backend/tests/unit/database/: test_database.py  test_init_db.py  test_seed.py
backend/tests/unit/models/: test_models.py
backend/tests/unit/notes/: test_notes_utils.py
backend/tests/unit/routers/: test_health_router.py  test_notes_no_embedding_plumbing.py  test_notes_transaction_errors.py
backend/tests/unit/schemas/: test_schemas.py
backend/tests/unit/services/: test_auth_service.py  test_backfill.py  test_embeddings.py  test_health_service.py  test_note_events.py  test_note_service.py
backend/tests/unit/utils/: test_markdown.py
deploy/: SERVER_SETUP.md  update.sh
docs/: AUTHELIA_OIDC.md  AUTHELIA_OIDC_ADVANCED_SCENARIOS.md  AUTHELIA_OIDC_API_REFERENCE.md  AUTHELIA_OIDC_BACKEND_DEVELOPER_GUIDE.md  AUTHELIA_OIDC_COMPLIANCE_AUDIT.md  AUTHELIA_OIDC_CONFIG_EXAMPLE.md  AUTHELIA_OIDC_DEPLOYMENT.md  AUTHELIA_OIDC_DEPLOYMENT_VALIDATION.md  AUTHELIA_OIDC_DISASTER_RECOVERY.md  AUTHELIA_OIDC_ENV.md  AUTHELIA_OIDC_FAQ.md  AUTHELIA_OIDC_FRONTEND_DEVELOPER_GUIDE.md  AUTHELIA_OIDC_IMPLEMENTATION.md  AUTHELIA_OIDC_IMPLEMENTATION_COMPLETE.md  AUTHELIA_OIDC_INFRASTRUCTURE_AS_CODE.md  AUTHELIA_OIDC_INTEGRATION_PATTERNS.md  AUTHELIA_OIDC_ITERATION_SUMMARY.md  AUTHELIA_OIDC_LOCAL_TESTING.md  AUTHELIA_OIDC_MIGRATION_GUIDE.md  AUTHELIA_OIDC_MONITORING.md  AUTHELIA_OIDC_MONITORING_OBSERVABILITY.md  AUTHELIA_OIDC_OPERATIONS_RUNBOOK.md  AUTHELIA_OIDC_PLAN.md  AUTHELIA_OIDC_PLAN_IMPLEMENTATION_GUIDE.md  AUTHELIA_OIDC_PLAN_IMPLEMENTATION_VERIFICATION.md  AUTHELIA_OIDC_QUICKSTART.md  AUTHELIA_OIDC_RALPH_LOOP_FINAL_SUMMARY.md  AUTHELIA_OIDC_SECURITY_HARDENING.md  AUTHELIA_OIDC_SMOKE_TEST.md  AUTHELIA_OIDC_SUMMARY.md  AUTHELIA_OIDC_TESTING_UTILITY.md  AUTHELIA_OIDC_TROUBLESHOOTING.md  BACKEND_MIGRATION_RESEARCH.md  ai-embeddings-design.md  eslint-strictness-plan.md  north-star.md
frontend/: Dockerfile
makefiles/: backend.mk  common.mk  db-admin.mk  deploy.mk  docker.mk  help.mk  migrations.mk  ui.mk  users.mk
parchmark/: Deployment Guide.md  EDAV AI Chat Application - Comprehensive Feature Documentation.md  Guardian Authentication Implementation Guide for ParchMark.md  Tej Gandham resume for united health.md  Untitled 2.md  Untitled.md  (+1 more)
(+486 files in other folders)
